Mike Layout Edits

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,16 +8,11 @@
     <div class="page">
       <h3>What is Campusmack?</h3>
 
-      <p>Campusmack is a website where College Students, Alumni, and Fans alike can post and share content about
-        campuses they love or love to hate. Have you ever been frustrated by a friend, coworker, or family member who
-        constantly gets in your face about how the College you love sucks? Campusmack is designed to help you find and
-        post dirt on the Campus your antagonist supports so you can put them in their place!</p>
+	  <p>It's not that we don't like you, we just don't like your Campus.  Find all the latest College Smack
+		 posted by our Writers and Users at Campusmack.com.<p>
 
-      <p>While it can be tough to hold back sometimes when talking smack, Campusmack wants to build an edgy yet clean
-        environment for its users. This means absolutely no bullying, nudity, or profanity. Please Smack
-        Responsibly!</p><br>
-
-		<a><%= smacks.new poop %> poop</a>
+      <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying, 
+	     nudity, profanity, or lame jokes.</p><br>
 
     </div>
   </div>
