--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -51,7 +51,7 @@
           Posted
           <span class="date"><%= formatted_datetime(@post.created_at.to_datetime) %>, </span>
           <em>by</em>
-          <%= link_to @post.user.try(:username), user_path(@post.user), :class => "author" %>
+          <%= link_to @post.user.try(:first_name) + " " + @post.user.try(:last_name), user_path(@post.user), :class => "author" %>
         </div>
 
         <% if @post.photo || @post.news_post || @post.video || @post.article %>
@@ -98,6 +98,7 @@
           <% end %>
           </div>
         <% end %>
+		</div>
         <br class="clear"/>
         <div class="content_title2">Comments</div>
         <% if signed_in? %>
@@ -114,7 +115,6 @@
           <% unless current_user %>
             <p class="comment_auth_message">You must be signed in to comment. <%=link_to "Sign in", sign_in_path %> or <%= link_to "Create an Account", sign_up_path %>.</p>
           <% end %>
-        </div>
       </div>
     </div>
   </div>
