--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -9,7 +9,7 @@
     <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
     <div class="which-college">
       <span class="date"><%= formatted_datetime(post.created_at.to_datetime) %>, </span>
-      <em class="lowercase"> by</em> <%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %>
+      <em class="lowercase"> by</em> <%= link_to(truncate(post.user.try(:first_name), :length => 16) + " " + truncate(post.user.try(:last_name), :length => 16), post.user, :class => :author) %>
       <% if params[:controller] == 'welcome' %>
         &nbsp;<span class="article_college">College:&nbsp;<%= link_to post.postable.name, post.postable %></span>
       <% end %>
