--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,7 +75,7 @@
 
     <div class="most_smacked">
 
-	 <div class="most_smacked_header"><h2>Most Smacked Campus:</h2></div>
+	 <div class="most_smacked_header"><h2>Most Smacked Campus</h2></div>
     <div class="most_smacked_title"><h3><strong><%= @colleges.first.try(:name) %>:
 	</strong></h3></div>
 	<div class="most_smacked_number"><h3><%= @colleges.first.try(:smacks_count) %>&nbsp;smacks</h3></div>
