--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,13 +6,19 @@
 
   <div class="content_container">
     <div class="page">
-      <h3>What is Campusmack?</h3>
+	<div class = "about">
+      <h3>The Scoop</h3>
+	</div>
 
 	  <p>It's not that we don't like you, we just don't like your Campus.  Find all the latest College Smack
 		 posted by our Writers and Users at Campusmack.com.<p>
 
       <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying, 
-	     nudity, profanity, or lame jokes.</p><br>
+	     nudity, profanity, or lame jokes.</p>
+	
+	<div class = "about">
+	  <h3>Our Team</h3>
+	</div>
 
     </div>
   </div>
