About page styling.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,24 +1,38 @@
 <div class="content new_level">
   <div class="content_header">
     <div class="content_title">About</div>
-      <%= render 'nav' %>
+    <%= render 'nav' %>
   </div>
 
   <div class="content_container">
-    <div class="page">
-	<div class = "about">
+    <div class="page about">
       <h3>The Scoop</h3>
-	</div>
 
-	  <p>It's not that we don't like you, we just don't like your Campus.  Find all the latest College Smack
-		 posted by our Writers and Users at Campusmack.com.<p>
+      <p>It's not that we don't like you, we just don't like your Campus. Find all the latest College Smack
+        posted by our Writers and Users at Campusmack.com.<p>
 
-      <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying, 
-	     nudity, profanity, or lame jokes.</p>
-	
-	<div class = "about">
-	  <h3>Our Team</h3>
-	</div>
+      <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying,
+        nudity, profanity, or lame jokes.</p>
+
+      <h3>Our Team</h3>
+
+      <div class="aboutProfile">
+        <img src="/images/about/mike.jpg"/>
+
+        <div class="aboutBio">
+          <h2>Michael Bivone</h2>
+
+          <h3>CEO &amp; Founder</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut nulla sapien, at pharetra sapien. Nullam sed
+            diam sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
+            consequat semper condimentum. Morbi ultricies, leo non rhoncus malesuada, magna elit semper enim, tempor
+            accumsan risus mi in libero.<br><br>Aenean id mattis ipsum. Pellentesque massa ante, semper quis
+            posuere a, consequat non ante. In porttitor nibh vel risus tincidunt dapibus.<br><br>
+            <a href="http://www.linkedin.com/">LinkedIn </a>| <a href="http://twitter.com/">Twitter</a> |
+            <a href="http://www.facebook.com/">Facebook</a></p>
+        </div>
+        <div class="clear"></div>
+      </div>
 
     </div>
   </div>
