--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,8 +8,7 @@
     <div class="page about">
       <h3>The Scoop</h3>
 
-      <p>It's not that we don't like you, we just don't like your Campus. Find all the latest College Smack
-        posted by our Writers and Users at Campusmack.com.<p>
+      <p>Have something funny you would like to share about a College?  Want to talk Smack about your rivals?  Campusmack.com is your source for finding, posting, and sharing all of the latest College Smack.<p>
 
       <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying,
         nudity, profanity, or lame jokes.</p>
@@ -23,13 +22,10 @@
           <h2>Michael Bivone</h2>
 
           <h3>CEO &amp; Founder</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut nulla sapien, at pharetra sapien. Nullam sed
-            diam sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
-            consequat semper condimentum. Morbi ultricies, leo non rhoncus malesuada, magna elit semper enim, tempor
-            accumsan risus mi in libero.<br><br>Aenean id mattis ipsum. Pellentesque massa ante, semper quis
-            posuere a, consequat non ante. In porttitor nibh vel risus tincidunt dapibus.<br><br>
-            <a href="http://www.linkedin.com/">LinkedIn </a>| <a href="http://twitter.com/">Twitter</a> |
-            <a href="http://www.facebook.com/">Facebook</a></p>
+          <p>In addition to working on all things Campusmack, Michael is currently an Independent Supply Chain Strategy Consultant with the Reverse Logistics team at AT&amp;T Mobility.  Prior to consulting at AT&amp;T, Michael worked as a Healthcare Consultant at Triage Consulting Group.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
+Michael's inspiration for Campusmack came from many exchanges with his grade school buddies about how Georgia Tech is full of nerds and how UGA is for dumb rednecks.<br><br>
+            <a href="http://www.linkedin.com/pub/michael-bivone/4/611/103">LinkedIn </a>| <a href="https://twitter.com/mikebivone/">Twitter</a>
+            </p>
         </div>
         <div class="clear"></div>
       </div>
