--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -6,7 +6,11 @@
     <% end %>
   </div>
   <div class="item-top">
-    <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
+	<% if post.article %>
+    <h3><%= link_to truncate(post.title, :length => 55), post, :title => post.title %></h3>
+	<% else %>
+	<h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
+	<% end %>
     <div class="which-college">
       <span class="date"><%= formatted_datetime(post.created_at.to_datetime) %>, </span>
       <em class="lowercase"> by</em> <%= link_to(truncate(post.user.try(:first_name), :length => 16) + " " + truncate(post.user.try(:last_name), :length => 16), post.user, :class => :author) %>
