--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -7,21 +7,9 @@
 </tr>
 
 <tr>
-  <td class="description"><%= f.label :first_name, "First Name:" %></td>
+  <td class="description"><%= f.label :first_name, "Name:" %></td>
   <td class="entry"><%= f.text_field :first_name %></td>
   <td class="star"><%= mark_required(resource, :first_name) %></td>
-</tr>
-
-<tr>
-  <td class="description"><%= f.label :last_name, "Last Name:" %></td>
-  <td class="entry"><%= f.text_field :last_name %></td>
-  <td class="star"><%= mark_required(resource, :last_name) %></td>
-</tr>
-
-<tr>
-  <td class="description"><%= f.label :gender, "Gender:" %></td>
-  <td class="entry"><%= f.select(:gender, [['Male', 'M'], ['Female', 'F']], {:include_blank => true}, :class => 'gender') %></td>
-  <td class="star"><%= mark_required(resource, :gender) %></td>
 </tr>
 
 <tr>
@@ -42,12 +30,5 @@
 <tr>
   <td class="description"><%= f.label :password, "Password:" %></td>
   <td class="entry"><%= f.password_field :password, :validate =>{:presence => true, :confirmation => true} %></td>
-  <td class="star"><%= mark_required(resource, :password) %></td>
-</tr>
-
-<tr>
-
-  <td class="description"><%= f.label :password_confirmation, "Confirm password:" %></td>
-  <td class="entry"><%= f.password_field :password_confirmation, :validate =>{:presence => true, :confirmation => true} %></td>
   <td class="star"><%= mark_required(resource, :password) %></td>
 </tr>
