More Route Edits

--- a/app/views/shared/_photovideomenu.html.erb
+++ b/app/views/shared/_photovideomenu.html.erb
@@ -4,7 +4,8 @@
         <span>Videos</span>
     <% else %>
       <% if @parent %>
-        <%= link_to "Videos", @parent.is_a?(College) ? college_videos_path(@parent) : conference_videos_path(@parent) %>
+        <%= link_to "Videos", @parent.is_a?(College) ? college_videos_path(@parent) : 
+		@parent.is_a?(User) ? user_videos_path(@parent) : conference_videos_path(@parent) %>
       <% else %>
         <%= link_to "Videos", videos_path %>
       <% end %>
@@ -15,7 +16,8 @@
         <span>Photos</span>
     <% else %>
       <% if @parent %>
-        <%= link_to "Photos", @parent.is_a?(College) ? college_photos_path(@parent) : conference_photos_path(@parent) %>
+        <%= link_to "Photos", @parent.is_a?(College) ? college_photos_path(@parent) : 
+		@parent.is_a?(User) ? user_photos_path(@parent) : conference_photos_path(@parent) %>
       <% else %>
         <%= link_to "Photos", photos_path %>
       <% end %>
@@ -26,7 +28,8 @@
         <span>News</span>
     <% else %>
       <% if @parent %>
-        <%= link_to "News", @parent.is_a?(College) ? college_news_index_path(@parent) : conference_news_index_path(@parent) %>
+        <%= link_to "News", @parent.is_a?(College) ? college_news_index_path(@parent) : 
+		@parent.is_a?(User) ? user_news_index_path(@parent) : conference_news_index_path(@parent) %>
       <% else %>
         <%= link_to "News", news_index_path %>
       <% end %>
