--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,10 @@
   <div class="content_stats clearfix">
     <ul class="inner_menu">
       <li>
-        <%= link_to "#{@user.smacks.count} smacks", smacks_user_path(@user) %>
+        <%= link_to "#{@user.smacks.count} smacks", user_smacks_path(@user) %>
       </li>
       <li>
-        <%= link_to "#{@user.redemptions.count} redemptions", redemptions_user_path(@user) %>
+        <%= link_to "#{@user.redemptions.count} redemptions", user_redemptions_path(@user) %>
       </li>
     </ul>
     <%= render 'shared/search' %>
