--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <script>
     window.CKEDITOR_BASEPATH = '/javascripts/ckeditor/';
   </script>
-  <script src="/javascripts/ckeditor/ckeditor.js" type="text/javascript" />
+  <script src="/javascripts/ckeditor/ckeditor.js" type="text/javascript"></script>
   <% if params[:controller] == 'contacts' %>
       <%= javascript_include_tag 'contacts' %>
   <% end %>
