--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@
           <h2>Michael Bivone</h2>
 
           <h3>CEO &amp; Founder</h3>
-          <p>In addition to working on all things Campusmack, Michael is currently an Independent Supply Chain Strategy Consultant with the Reverse Logistics team at AT&amp;T Mobility.  Prior to consulting at AT&amp;T, Michael worked as a Healthcare Consultant at Triage Consulting Group.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
+          <p>In addition to working on all things Campusmack, Michael also works as an independent supply chain consultant for a major US telecom provider.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
 Michael's inspiration for Campusmack came from many exchanges with his grade school buddies who went to rival colleges.<br><br>
             <a href="http://www.linkedin.com/pub/michael-bivone/4/611/103">LinkedIn </a>| <a href="https://twitter.com/mikebivone/">Twitter</a>
             </p>
