--- a/app/views/pages/howto.html.erb
+++ b/app/views/pages/howto.html.erb
@@ -113,7 +113,7 @@
     <li>
       <h4><a name="f3b"></a>Importing Contacts Through the "Send as Smack" Function</h4>
       <ol start="1" type="1">
-        <li>Once signed in to your account, click on the <%= image_tag('about/send_as_smack_big.jpg') %> button on
+        <li>Once signed in to your account, click on the <%= image_tag('about/send_as_smack_small.png') %> button on
           any Campusmack post.
         </li>
         <li>On the next page, click on the <%= image_tag('about/import_contacts.jpg') %> button beneath the
@@ -208,7 +208,7 @@
       <h4><a name="f5a"></a>Send as Smack</h4>
       <ol start="1" type="1">
         <li>Once you find a post you want to send_as_mack talk, click
-          the <%= image_tag('about/send_as_smack_big.jpg') %> button. You will be routed to a landing page to
+          the <%= image_tag('about/send_as_smack_small.png') %> button. You will be routed to a landing page to
           compose the Smack email.
         </li>
         <li> If you've imported your email contacts, click the "Add Recipients" button and you'll be able to select
