--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -733,6 +733,10 @@ a.sign_up:hover {
   overflow: hidden;
 }
 
+.content_container .content_category .user_paginate {
+	margin-bottom: 10px;
+}
+
 .content_container .content_category.last {
   border-bottom: none;
 }
@@ -740,7 +744,7 @@ a.sign_up:hover {
 .content_container .content_category .category_title {
   font-size: 16.72pt;
   font-weight: bold;
-  border-bottom: 1px solid #d4d4d4;
+  /*border-bottom: 1px solid #d4d4d4;*/
   margin-bottom: 10px;
   color: #333;
 }
@@ -873,6 +877,13 @@ a.view_more {
   color: #A5A5A5;
 }
 
+.content_unit2 .unit_info  .which-college {
+  font-size: 10px;
+  overflow: hidden;
+  color: #999;
+  text-transform: uppercase;
+}
+
 .content_unit2 .unit_info span.date {
   color: #4D4D4D;
 }
@@ -891,19 +902,22 @@ a.view_more {
 
 .share_smack_btn {
   margin-left: 6px;
-  padding: 0 0 0 6px;
+  padding: 0px 0 0 6px;
   margin-left: 6px;
   background: url(/assets/send_as_smack_medium.png) no-repeat top;
   display: inline-block;
   text-indent: -9999px;
   width: 66px;
   height: 14px;
+  margin-top: 2px;
 }
 
 .share_smack_btn.small {
   background: url(/assets/send_as_smack_small.png) no-repeat top;
   width: 37px;
   height: 13px;
+  margin-top: 2px;
+
 }
 
 .share_smack_btn.big {
@@ -960,7 +974,7 @@ ul.news li {
   background-color: #dedede;
   margin-right: 10px;
   padding: 3px 3px 3px 6px;
-}
+} 
 
 .date,
 .time {
@@ -976,10 +990,11 @@ ul.news li {
   text-decoration: underline;
 }
 
+/*Note: This is where we set the Photo Background Color*/
 .team-item .preview,
 .photo_box,
 .smack_container .smack_content {
-  background-color: #000;
+  background-color: #d4d4d4;
   text-align: center;
 }
 
@@ -1155,6 +1170,16 @@ a.section_link:hover {
   background-color: #fff;
   margin: 7px 0 0 20px;
   overflow: hidden;
+}
+
+
+.img_section2 {
+  width: 180px;
+  height: 162px;
+  float: left;
+  background-color: #fff;
+  margin: 0px 0 0 0px;
+
 }
 
 .img_section img {
@@ -1827,6 +1852,14 @@ ul.items {
   list-style: none;
 }
 
+.aborder .team-item {
+  margin: 0 2px 5px;
+  float: left;
+  list-style: none;
+  border: 1px solid #d4d4d4;
+  padding: 2px 2px 2px 2px;
+}
+
 .featured_articles, .articles {
   margin: 20px 0px 0px 0px;
 }
@@ -1916,7 +1949,7 @@ ul.items {
 }
 
 .team-item .item-top h3 {
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 5px;
 }
 
@@ -1947,6 +1980,19 @@ ul.items {
 
 .team-item .which-college a:hover {
   text-decoration: underline;
+}
+
+.team-item .which-college .team {
+	  color: #777777;
+	  background-color: #dedede;
+	  padding: 3px 3px 3px 3px;	
+		
+}
+
+.team-item .which-college .post_border{
+  border-bottom: 1px solid #d4d4d4;
+  margin-bottom: 2px;
+  width: 180px;
 }
 
 .votes .voting_icons {
@@ -1991,7 +2037,7 @@ ul.actions li {
   font-size: 13px;
   height: 65px;
   margin-bottom: 5px;
-  overflow: hidden;
+
 }
 
 .team-item .items-buttons {
@@ -2402,4 +2448,5 @@ border-left: 1px solid #C4C4C4;      */
 
 .preview img {
   min-height: 135px;
+  max-width: 180px;
 }
