--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -552,6 +552,12 @@ a.sign_up:hover {
   border-top: 2px solid #0476C7;
 }
 
+.separator_line .space {
+  height: 1px;
+  border-top: 2px solid #0476C7;
+  margin-bottom: 20px;
+}
+
 .college_content_title_first {
   border-top: none;
 }
