--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -91,6 +91,9 @@
           <%= render "posts/articles_preview", :post => post %>
         <% end %>
       </ul>
+		<div class="view_more_link clear_both">
+          <%= link_to "See all Articles", article_posts_path %>
+        </div>
     </div>
   <% end %>
 
@@ -100,4 +103,23 @@
     <div class="home_smacks_of_week">
     <%= render :partial => 'sotw', :collection => Post.smacks_of_week %></div>
   </div>
+		<div class="view_more_link clear_both">
+        <%= link_to "See all Smacks", smacks_path %>
+      </div>
 </div>
+
+  <div class="college_content_title"><h2>Recent Posts</h2></div>
+    <div class="separator_line space"></div>
+  <div class="content_container">
+	<br>
+	<ul class="items four_col_view">
+      <% @home_list.each do |post| %>
+      <%= render "posts/small_preview", :post => post %>
+	<% end %>
+	</ul>
+	 </div>
+		<div class="view_more_link clear_both">
+          <%= link_to "See all Posts", posts_path %>
+        </div>
+		<br><br>
+  </div>
