--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -96,18 +96,18 @@
         </div>
     </div>
   <% end %>
-
+  <% if @sotw %>
   <div class="college_content_title"><h2>Smacks of the Week</h2></div>
     <div class="separator_line"></div>
   <div class="content_container clearfix">
     <div class="home_smacks_of_week">
-    <%= render :partial => 'sotw', :collection => Post.smacks_of_week %></div>
+    <%= render :partial => 'sotw', :collection => @sotw %></div>
   </div>
 		<div class="view_more_link clear_both">
         <%= link_to "See all Smacks", smacks_path %>
       </div>
-</div>
-
+  </div>
+  <% end %>
   <div class="college_content_title"><h2>Recent Posts</h2></div>
     <div class="separator_line space"></div>
   <div class="content_container">
