--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,10 +8,12 @@
     <div class="page about">
       <h3>The Scoop</h3>
 
-      <p>Have something funny you would like to share about a College?  Want to talk Smack about your rivals?  Campusmack.com is your source for finding, posting, and sharing all of the latest College Smack.<p>
+      <p>Campusmack.com is home to the best College Smack on the web.</p>   
+	  <p>Find and share some of the funniest memes, videos, and articles from colleges nationwide.  If you have something funny you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
+	  <p>SMACK = Make Fun of a College</p> 
+	  <p>REDEMPTION = Bragging Rights<p>
 
-      <p>We want to build an edgy yet clean environment for our users. This means absolutely no bullying,
-        nudity, profanity, or lame jokes.</p>
+      <p>No bullying, nudity, or lame jokes.  That is all....</p>
 
       <h3>Our Team</h3>
 
@@ -22,7 +24,7 @@
           <h2>Michael Bivone</h2>
 
           <h3>CEO &amp; Founder</h3>
-          <p>In addition to working on all things Campusmack, Michael also works as an independent supply chain consultant for a major US telecom provider.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
+          <p>In addition to working on all things Campusmack, Michael also works as an independent supply chain consultant for a major U.S. telecom provider.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
 Michael's inspiration for Campusmack came from many exchanges with his grade school buddies who went to rival colleges.<br><br>
             <a href="http://www.linkedin.com/pub/michael-bivone/4/611/103">LinkedIn </a>| <a href="https://twitter.com/mikebivone/">Twitter</a>
             </p>
