--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -108,15 +108,16 @@
       </div>
   </div>
   <% end %>
+
   <div class="college_content_title"><h2>Recent Posts</h2></div>
-    <div class="separator_line space"></div>
-  <div class="content_container">
-	<br>
-	<ul class="items four_col_view">
+   <div class="separator_line space"></div>
+    <div class="content_container clearfix">
+	 <br>
+	 <ul class="items four_col_view_welcome">
       <% @home_list.each do |post| %>
       <%= render "posts/small_preview", :post => post %>
-	<% end %>
-	</ul>
+	  <% end %>
+	 </ul>
 	 </div>
 		<div class="view_more_link clear_both">
           <%= link_to "See all Posts", posts_path %>
