--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -91,7 +91,7 @@
           <%= render "posts/articles_preview", :post => post %>
         <% end %>
       </ul>
-		<div class="view_more_link clear_both">
+		<div class="vml_welcome clear_both">
           <%= link_to "See all Articles", article_posts_path %>
         </div>
     </div>
@@ -103,7 +103,7 @@
     <div class="home_smacks_of_week">
     <%= render :partial => 'sotw', :collection => @sotw %></div>
   </div>
-		<div class="view_more_link clear_both">
+		<div class="vml_welcome clear_both">
         <%= link_to "See all Smacks", smacks_path %>
       </div>
   </div>
@@ -119,7 +119,7 @@
 	  <% end %>
 	 </ul>
 	 </div>
-		<div class="view_more_link clear_both">
+		<div class="vml_welcome clear_both">
           <%= link_to "See all Posts", posts_path %>
         </div>
 		<br><br>
