About Page edits

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,11 +6,9 @@
 
   <div class="content_container">
     <div class="page about">
-      <h3>The Scoop</h3>
-
-      <p>Campusmack.com is home to the best College Smack on the web.</p>   
-	  <p>Find and share some of the funniest memes, videos, and articles from colleges nationwide.  If you have something funny you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
-	  <p>SMACK = Make Fun of a College</p> 
+      <h3>The Scoop</h3> 
+	  <p>Find and share some of the funniest memes, videos, and articles from Colleges nationwide on Campusmack.com.  If you've got some ridiculously funny memes you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
+	  <p>SMACK = No definition needed.  Would you smack your Mom?</p> 
 	  <p>REDEMPTION = Bragging Rights<p>
 
       <p>No bullying, nudity, or lame jokes.  That is all....</p>
