--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -1,5 +1,4 @@
-<div class="aborder">
-<li class="team-item">
+<li class="aborder team-item">
   <div class="item-top clearfix">
     <h3><%= link_to truncate(post.title.upcase, :length => 22), post, :title => post.title %></h3>
     <div class="which-college">
@@ -24,4 +23,3 @@
   </div>
   <%= share_and_voting_icons(post, :preview) %>
 </li>
-</div>
